# elise_ai

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pr-check.yml  python.yml
src/: audio.py  chat.py  config.py  kk_voice.py  logging_config.py  mac_voice.py  main.py  tasks.py  transcribe.py
src/agent/: chat.py  mcp_config.py  mcpclient.py  tools.py
src/input/: audio.py  text.py  transcribe.py
src/model/: event.py  pipeline.py  queue_event.py
src/protocol/: chat.py  input.py  mcpclient.py
src/repository/: input.py
src/speech/: kokoro.py  text.py
tests/: test_audio.py  test_pipeline.py
