[project]
name = "py-whisper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kokoro>=0.8.4",
    "langchain>=0.3.20",
    "langchain-anthropic>=0.3.9",
    "misaki[ja]>=0.8.4",
    "numpy>=1.26.4",
    "openai-whisper>=20240930",
    "pip>=25.0.1",
    "pyaudio>=0.2.14",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.9.10",
]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
testpaths = ["tests"]
